ui: preventing overflow (large length / number of messages / channels) from breaking layout

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,24 +9,63 @@ body {
   display: flex;
 }
 
+:root {
+  --bg-dark-blue: #1e325c;
+  --sidebar-width: 256px;
+  --section-max-height: 100vh;
+  --section-name-height: 55px;
+}
+
 #root {
   display: flex;
   flex-grow: 1;
+}
+
+main {
+  display: grid;
+  grid-template-columns: var(--sidebar-width) auto;
+  grid-template-areas:
+    "sidebar content"
+    "sidebar content";
+  max-height: 100vh;
 }
 
 textarea {
   resize: none;
 }
 
+.overflow-hidden-scroll {
+  overflow: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  -webkit-overflow-scrolling: touch;
+  &::-webkit-scrollbar {
+    width: 4px;
+    height: 0;
+  }
+  &::-webkit-scrollbar-button,
+  &::-webkit-scrollbar-corner {
+    display: none;
+  }
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: #fbfbfb;
+    border-radius: 4px;
+  }
+}
+
 .sidebar {
-  background-color: #1e325c;
-  flex: 0 0 256px;
+  grid-area: sidebar;
+  background-color: var(--bg-dark-blue);
+  max-width: 256px;
   height: 100%;
   align-self: flex-start;
   color: #fff;
 
   .list-group-item:hover {
-    background: rgba(255, 255, 255, 0.1) !important;
+    background-color: rgba(255, 255, 255, 0.1) !important;
   }
 
   .list-group-item.active {
@@ -42,21 +81,14 @@ textarea {
   margin: 0;
 }
 
-.channel-view {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  box-sizing: border-box;
-  position: relative;
+.channels-list {
+  max-height: calc(var(--section-max-height) - var(--section-name-height));
+}
 
-  .empty {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    justify-self: center;
-    margin: 60px 0;
+.channel-view {
+  grid-area: content;
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--bg-dark-blue);
   }
 }
 
